add admin user and change user password
